# tru-bridge-pulse

./: .gitignore  API_USAGE_EXAMPLES.md  NAVBAR_IMPLEMENTATION_SUMMARY.md  ORGAN_DONOR_README.md  package-lock.json  package.json  pyproject.toml
examples/: AlgorithmBreakdown.jsx  DonorSearchResults.jsx  organ-search-examples.js
src/app/: globals.css  layout.js  page.js
src/app/api/auth/login/: route.js
src/app/api/auth/logout/: route.js
src/app/api/debug-data/: route.js
src/app/api/fix-timestamps/: route.js
src/app/api/location-suggestions/: route.js
src/app/api/organ-donor/: route.js
src/app/api/piyush-route/: index.html  routine_check.py  routine_check_copy.py  session_prompt.py  summary_promt.py  test_client.py
src/app/api/reports/: route.js
src/app/api/test-data/: route.js
src/app/api/tts/: route.js
src/app/auth/login/: page.js
src/app/auth/signup/: page.js
src/app/chat_avatar/: CircleAnimation.js  circle_animation.js  line_animation.js
src/app/dashboard/: page.js  page_backup.js  page_new.js
src/app/donor-search/: page.js
src/app/donor-search-public/: page.js  publicView.js
src/app/organ-donor/: page.js
src/app/profile/: page.js
src/app/reports/: page.js
src/app/speechtotxt/: page.js
src/app/speechtotxt1/: page.js
src/app/speechtotxt2/: page.js
src/app/tts/: page.js
src/components/: Navbar.js
src/hooks/: useAuth.js
src/lib/: deepgramClient.js  mongodb.js  organDonorUtils.js  organMatchingUtils.js
src/models/: OrganDonor.js  Summary.js  User.js
test/: search-api-test.js
test-data/: sample-summaries.js
(+4 files in other folders)
